complexsystem/VPC.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "VPC with DNS and Public IPs enabled.",
    "Mappings": {
        "SubnetConfig": {
            "VPC": {
                "CIDR": "10.129.0.0/16"
            },
            "Public1": {
                "CIDR": "10.129.1.0/24"
            },
            "Public2": {
                "CIDR": "10.129.2.0/24"
            },
            "Public3": {
                "CIDR": "10.129.101.0/24"
            },
            "Public4": {
                "CIDR": "10.129.102.0/24"
            },
            "MntVPC": {
                "CIDR": "172.18.0.0/16"
            },
            "MntPublic1": {
                "CIDR": "172.18.1.0/24"
            },
            "MntPublic2": {
                "CIDR": "172.18.2.0/24"
            }
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "VPC",
                        "CIDR"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "tstt-vpc-aig"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "TstSubnet1PubA": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "ap-northeast-1a",
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "Public1",
                        "CIDR"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "tst-subnet1-pub-a"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "TstSubnet2PubC": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": "ap-northeast-1c",
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "Public2",
                        "CIDR"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "tst-subnet2-pub-c"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "TstSubnet3PriA": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
            },

            "AvailabilityZone": "ap-northeast-1a",
            "CidrBlock": {
                "Fn::FindInMap": [
                    "SubnetConfig",
                    "Public3",
                    "CIDR"
                ]
            },
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "tst-subnet3-pri-a"
                },
                {
                    "Key": "Application",
                    "Value": {
                        "Ref": "AWS::StackName"
                    }
                },
                {
                    "Key": "Network",
                    "Value": "Public"
                }
            ]
        }        },
        "TstSubnet4PriC": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                "Ref": "VPC"},
                "AvailabilityZone": "ap-northeast-1c",
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "Public4",
                        "CIDR"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "tst-subnet4-pri-c"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DevInternetGateway"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "GatewayToInternet": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "tst-route-pub"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "tst-route-pri"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Private"
                    }
                ]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "GatewayToInternet"
            ],
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "PublicSubnetRouteTableAssociation1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": "PublicRouteTable",
            "Properties": {
                "SubnetId": {
                    "Ref": "TstSubnet1PubA"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "PublicSubnetRouteTableAssociation2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": "PublicRouteTable",
            "Properties": {
                "SubnetId": {
                    "Ref": "TstSubnet2PubC"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "PublicSubnetRouteTableAssociation3": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": "PrivateRouteTable",
            "Properties": {
                "SubnetId": {
                    "Ref": "TstSubnet3PriA"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }
            }
        },
        "PublicSubnetRouteTableAssociation4": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": "PrivateRouteTable",
            "Properties": {
                "SubnetId": {
                    "Ref": "TstSubnet4PriC"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }
            }
        },
        "PublicNetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "tst-aig-alc"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "InboundPublicNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "OutboundPublicNetworkAclEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                },
                "RuleNumber": "100",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "PublicSubnetNetworkAclAssociation1": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "TstSubnet1PubA"
                },
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                }
            }
        },
        "PublicSubnetNetworkAclAssociation2": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "TstSubnet2PubC"
                },
                "NetworkAclId": {
                    "Ref": "PublicNetworkAcl"
                }
            }
        },

    "MntVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "MntVPC",
                        "CIDR"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "mnt-vpc-aig"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "MntSubnetPubA": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "MntVPC"
                },
                "AvailabilityZone": "ap-northeast-1a",
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "MntPublic1",
                        "CIDR"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "mnt-subnet-pub-a"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "MntSubnetPubC": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "MntVPC"
                },
                "AvailabilityZone": "ap-northeast-1c",
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "MntPublic2",
                        "CIDR"
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "mnt-subnet-pub-c"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "MntInternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "MntInternetGateway"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "MntGatewayToInternet": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "MntVPC"
                },
                "InternetGatewayId": {
                    "Ref": "MntInternetGateway"
                }
            }
        },
        "MntRoutePub": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "MntVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "mnt-route-pub"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Network",
                        "Value": "Public"
                    }
                ]
            }
        },
        "MntPublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "MntGatewayToInternet"
            ],
            "Properties": {
                "RouteTableId": {
                    "Ref": "MntRoutePub"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "MntInternetGateway"
                }
            }
        },
        "MntPublicSubnetRouteTableAssociation1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": "MntRoutePub",
            "Properties": {
                "SubnetId": {
                    "Ref": "MntSubnetPubA"
                },
                "RouteTableId": {
                    "Ref": "MntRoutePub"
                }
            }
        },
        "MntPublicSubnetRouteTableAssociation2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": "MntRoutePub",
            "Properties": {
                "SubnetId": {
                    "Ref": "MntSubnetPubC"
                },
                "RouteTableId": {
                    "Ref": "MntRoutePub"
                }
            }
        },
        "VPCPeeringConnection": {
            "Type": "AWS::EC2::VPCPeeringConnection",
            "Properties": {
                "VpcId": {
                    "Ref": "MntVPC"
                },
                "PeerVpcId": {
                    "Ref": "VPC"
                }
            }
        },

        "PeeringRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "MntVPC",
                        "CIDR"
                    ]
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "VPCPeeringConnection"
                }
            }
        },

        "MntPeeringRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig",
                        "VPC",
                        "CIDR"
                    ]
                },
                "RouteTableId": {
                    "Ref": "MntRoutePub"
                },
                "VpcPeeringConnectionId": {
                    "Ref": "VPCPeeringConnection"
                }
            }
        }









    },
    "Outputs": {
        "VPCId": {
            "Description": "VPCId of the newly created VPC",
            "Value": {
                "Ref": "VPC"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-VPC"
                }
            }
        },
        "TstSubnet1PubAID": {
            "Description": "The subnet ID to use for public web servers",
            "Value": {
                "Ref": "TstSubnet1PubA"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-TstSubnet1PubA"
                }
            }
        },
        "TstSubnet2PubCID": {
            "Description": "The subnet ID to use for public web servers",
            "Value": {
                "Ref": "TstSubnet2PubC"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-TstSubnet2PubC"
                }
            }
        },
        "TstSubnet3PriAID": {
            "Description": "The subnet ID to use for public web servers",
            "Value": {
                "Ref": "TstSubnet3PriA"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-TstSubnet3PriA"
                }
            }
        },
        "TstSubnet4PriCID": {
            "Description": "The subnet ID to use for public web servers",
            "Value": {
                "Ref": "TstSubnet4PriC"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-TstSubnet4PriC"
                }
            }
        },
        "MntVPCId": {
            "Description": "VPCId of the newly created VPC",
            "Value": {
                "Ref": "MntVPC"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-MntVPC"
                }
            }
        },
        "MntSubnetPubAID": {
            "Description": "The subnet ID to use for public web servers",
            "Value": {
                "Ref": "MntSubnetPubA"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-MntSubnetPubA"
                }
            }
        },
        "MntSubnetPubCID": {
            "Description": "The subnet ID to use for public web servers",
            "Value": {
                "Ref": "MntSubnetPubC"
            },
            "Export": {
                "Name": {
                    "Fn::Sub": "${AWS::StackName}-MntSubnetPubC"
                }
            }
        }
    }
}
